# anna

./: .gitmodules  CMakeLists.txt
dockerfiles/: anna-deps-libpmem.dockerfile  anna-gcc10.dockerfile  anna-latest.dockerfile  anna-local.dockerfile  anna.dockerfile  docker-compose.yml  start-anna-local.sh  start-anna.sh
dockerfiles.old/conf/: anna-config-bench.yml  anna-config-mn.yml
dockerfiles/conf/: anna-config-bench-lat.yml  anna-config-bench.yml  anna-config-ebs.yml  anna-config-mem.yml  anna-config-rt.yml
include/: kvs_common.hpp  metadata.hpp
include/kvs/: kvs_handlers.hpp  server_utils.hpp
middleware/: CMakeLists.txt  NvmMiddleware.cpp  NvmMiddleware.h  ThreadPool.h  timer.h
scripts/: build.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cpp  discrete_generator.h  generator.h  utils.h
src/kvs/: CMakeLists.txt  gossip_handler.cpp  replication_response_handler.cpp  server.cpp  user_request_handler.cpp  utils.cpp
src/route/: address_handler.cpp
